--- a/src/app/doggies-first-keeyus-page/doggies-first-keeyus-page.component.html
+++ b/src/app/doggies-first-keeyus-page/doggies-first-keeyus-page.component.html
@@ -1,3 +1,8 @@
 <h1>Farrest's first keeyus!</h1>
 
-<img src="../../assets/images/dog-pizza-love.gif">
+<div class="image-container">
+    <div class="image">
+        <img src="../../assets/images/dog-pizza-love.gif">
+    </div>
+</div>
+
